[package]
name = "serdebench"
version = "0.1.0"
authors = ["Andre Bogus <andre.bogus@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
bincode = "1.3.1"
rmp-serde = "0.14.4"
flatbuffers = "0.6.1"
postcard = "0.5.1"
serde_cbor = "0.11.1"
serde_yaml = "0.8.13"
flexbuffers = "0.1.1"
ron = "0.6.0"
abomonation = { git = "https://github.com/llogiq/abomonation", branch = "the-abomonable-range" }
abomonation_derive = "0.5.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false
