[package]
name = "serdebench"
version = "0.1.0"
authors = ["Andre Bogus <andre.bogus@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
bincode = "1.3.1"
flatbuffers = "0.6.1"
rmp-serde = "0.15.5"
postcard = "0.7.0"
serde_yaml = "0.8.13"
flexbuffers = "2.0.0"
ron = "0.6.0"
abomonation = { git = "https://github.com/TimelyDataflow/abomonation" }
abomonation_derive = "0.5.0"
capnp = "0.14.0"
simd-json = "0.4.6"
simd-json-derive = "0.2.2"
prost = "0.8"
rkyv = { version = "0.7.1", features = ["validation"] }
bytecheck = { version = "0.6.1" }
minicbor = {version = "0.12.0", features = ["std", "derive"]}

[build-dependencies]
prost-build = { version = "0.8" }

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false

